[metadata]
name = ncompress
version = 1.0.1
author = Martin Valgur
author_email = martin.valgur@gmail.com
url = https://github.com/valgur/ncompress
description = LZW compression and decompression
long_description = file: README.md
long_description_content_type = text/markdown
license = Unlicense
license_files = LICENSE
keywords =
    LZW
    compression
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: The Unlicense (Unlicense)

[options]
include_package_data = True
zip_safe = False
python_requires = >= 3.8

[options.extras_require]
tests = pytest
